Reluctantly added margins

--- a/src/tiles/tile.sass
+++ b/src/tiles/tile.sass
@@ -4,9 +4,14 @@
         justify-content: space-around
     &-tile
         &-container
-            background: rgb(255,255,255)
+            background: rgba(255,255,255,1)
+            margin: 0em 3em 0em 3em
+            flex: 1 1 0
         &-img 
             width: 100%
         &-heading
+            text-align: center
         &-subheading
+            text-align: center
         &-body
+            text-align: center
