--- a/src/index.pug
+++ b/src/index.pug
@@ -1,1 +1,5 @@
 <!-- inject-style src="./dist/main.css" -->
+
+include tiles/tile.pug
+include centred-textbox/centred-textbox.pug
+include titled-lists/titled-list.pug
