--- a/src/index.pug
+++ b/src/index.pug
@@ -2,4 +2,4 @@
 
 include tiles/tile.pug
 include centred-textbox/centred-textbox.pug
-include titled-lists/titled-list.pug
+include titled-list/titled-list.pug
